--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "https://tax-expres.herokuapp.com/salaries",
   "eslintConfig": {
     "extends": "react-app"
   },
